more box and javadoc implementation