@@ -38,6 +38,7 @@
         <log4j2.version>2.22.1</log4j2.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.test.version>3.0.1</slf4j.test.version>
         <slf4j.version>2.0.11</slf4j.version>
@@ -189,6 +190,32 @@
                             <goal>sort</goal>
                         </goals>
                         <phase>verify</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.plugin.version}</version>
+                <configuration>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <doclint>all,-missing</doclint>
+                    <!--
+                    <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+                    <docletArtifact>
+                        <groupId>nl.talsmasoftware</groupId>
+                        <artifactId>umldoclet</artifactId>
+                        <version>2.1.2</version>
+                    </docletArtifact>
+                    -->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>execution1</id>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
